--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,7 +19,7 @@ Pillow==10.3.0
 transformers==4.42.3
 accelerate==0.31.0
 faster-whisper==1.1.1
-moviepy==1.0.3
+moviepy>2.0.0
 jinja2==3.1.4
 pyyaml==6.0.1
 passlib==1.7.4
