--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     ports:
       - "5173:5173"
     environment:
-      - VITE_API_URL=http://nginx/api
+      - VITE_API_URL=http://localhost/api
     networks:
       - feellog_network
 
