--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,20 +30,22 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        # 클라이언트의 Origin을 동적으로 허용
+        set $cors_origin "";
+        if ($http_origin ~* "^http://(localhost|localhost:8080|localhost:5000)$") {
+            set $cors_origin $http_origin;
+        }
         
-        # CORS 헤더 추가
-        add_header Access-Control-Allow-Origin *;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
-        add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
+        # CORS 헤더 추가 (Credentialed 요청 처리)
+        add_header 'Access-Control-Allow-Origin' "$cors_origin" always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
         
         # OPTIONS 요청 처리
         if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin *;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
-            add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
-            add_header Content-Length 0;
-            add_header Content-Type text/plain;
-            return 200;
+            return 204;
         }
     }
 }
