다시 회원가입 api 문제

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,6 +25,9 @@ server {
 
     # API 요청을 백엔드로 전달
     location /api {
+        # 대용량 파일 업로드를 위해 요청 본문 크기 제한을 1000MB로 설정
+        client_max_body_size 1000M;
+
         proxy_pass http://backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
